helm/laetsch-ztv-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: laetsch-ztv-anmeldetool 
  namespace: ztv
spec:
  hostnames:
  - laetsch.homelinux.net
  parentRefs:
  - name: traefik-gateway
    sectionName: web 
    namespace: kube-system
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: ztv-anmeldetool.duckdns.org
        scheme: https
        statusCode: 301
