helm/laetsch.homelinux.ztv-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: laetsch-homelinux-anmeldetool 
  namespace: ztv
spec:
  hostnames:
  - laetsch.homelinux.net	
  parentRefs:
  - name: traefik-gateway
    sectionName: web 
    namespace: kube-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: ztv-getu-anmeldetool-backend-service
          port: 8080
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /ztv-anmeldetool/services
    - backendRefs:
        - group: ''
          kind: Service
          name: ztv-getu-anmeldetool-web-service
          port: 80
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /ztv-anmeldetool
